# gpu-programming-uni.lu

./: LICENSE  README.md
0-slurm/: slurm.sh
1-introduction-cuda/: utility.hpp
1-introduction-cuda/demo/: block_fake_floyd_shared.cu  block_min.cu  grid_min.cu  grid_min_shared.cu
1-introduction-cuda/exercises/: block_floyd.cu  grid_floyd.cu  thread_floyd.cu
1-introduction-cuda/solutions/: grid_floyd_cooperative_group.cu
2-cuda/floyd/: CMakeLists.txt
2-cuda/floyd/include/: config.hpp  utility.hpp
2-cuda/floyd/src/: config.cpp  floyd.cpp
2-cuda/solutions/: matrix.cu  utility.hpp
2-scan/: naive_binary_parallel_scan.cu  utility.hpp
3-scan/: README.md  naive_binary_parallel_scan.cu  slurm.sh
3-scan/scan/: cudaScan_ref  main.cpp  scan.cu  slurm-run.sh  slurm.sh
4-matrix-computation/: README.md
4-matrix-computation/GEMM/: CMakeLists.txt
4-matrix-computation/GEMM/src/: datatypes.hpp  gpu_GEMM.cu  gpu_GEMM_naive.cu  utility.hpp
4-matrix-computation/project/: CMakeLists.txt  README.md
4-matrix-computation/project/src/: datatypes.hpp  gpu_GEMM.cu  utility.hpp
4-matrix-computation/representation/: CMakeLists.txt  CMakePresets.json  README.md  tags
4-matrix-computation/representation/cmake/: utilities.cmake
4-matrix-computation/representation/data/: bcsstk01-extended.mtx
4-matrix-computation/representation/src/: 00_example_ddot.c  01_exercise_daxpy.c  01_solution_daxpy.c  02_exercise_dgemv.c  02_solution_dgemv.c  03_exercise_dgemm.c  03_solution_dgemm.c  04_exercise_cache.c  04_solution_cache.c  05_exercise_alignment.c  05_solution_alignment.c  CMakeLists.txt  example_execute.c  read_and_execute.c  read_matrix.c  utils.c  utils.h
5-IPU/: README.md
6-cuda-stream/histogram/: histogram.cu
